--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<sonar.projectKey>luharaca_mykitchen</sonar.projectKey>
+		<sonar.projectKey>luharaca_MyKitchen</sonar.projectKey>
 		<sonar.organization>luharaca</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
