--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.thymeleaf.cache=false
+
+#Data source
+spring.datasource.url=jdbc:mysql://localhost:3306/mykitchen?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password
+
+# Keep the connection alive if idle for a long time (need in production)
+spring.datasource.tomcat.test-while-idle=true
+spring.datasource.tomcat.validation-query=SELECT 1
+
+# show or not log for each sql query
+spring.jpa.show-sql=true
+
+# Hibernate ddl auto(create, create-drop, update): with "update" the database
+# schema will be automatically updated accordingly to java entities found in the project
+spring.jpa.hibernate.ddl-auto=update
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
