--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Turn off the caching mode so that the changes can render immediately for the development
 spring.thymeleaf.cache=false
 
 #Data source
