--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,15 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=mykitchen20200523@gmail.com
+spring.mail.password=mykitchendevelopment
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+support.email=mykitchen20200523@gmail.com
