--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,22 @@
 			<scope>test</scope>
 		</dependency>
 
+	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
+	<dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-inline</artifactId>
+		<scope>test</scope>
+	</dependency>
+
+
+
+	<dependency>
+		<groupId>org.hamcrest</groupId>
+		<artifactId>hamcrest-all</artifactId>
+		<version>1.3</version>
+		<scope>test</scope>
+	</dependency>
+
 	</dependencies>
 
 	<build>
