--- a/pom.xml
+++ b/pom.xml
@@ -88,26 +88,39 @@
 
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.10.19</version>
+			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 
-	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+
 	<dependency>
-		<groupId>org.mockito</groupId>
-		<artifactId>mockito-inline</artifactId>
+		<groupId>org.powermock</groupId>
+		<artifactId>powermock-module-junit4</artifactId>
+		<version>2.0.9</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.powermock</groupId>
+		<artifactId>powermock-api-mockito2</artifactId>
+		<version>2.0.9</version>
 		<scope>test</scope>
 	</dependency>
 
-
-
-	<dependency>
-		<groupId>org.hamcrest</groupId>
-		<artifactId>hamcrest-all</artifactId>
-		<version>1.3</version>
-		<scope>test</scope>
-	</dependency>
 
 	</dependencies>
 
